Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77937

Extra whitespace accessible with scroll-bars at the end of QPlainTextEdit widget

XMLWordPrintable

    • Linux/X11
    • 13ae47d98057c2ddca8c865b845973d7e4c8dd8b (qt/qtbase/dev) bbdcc86c52d806ab45fabf167526f9dcec291648 (qt/qtbase/6.1) cc5a1473f1fb22321f01b9955225eea1df54f417 (qt/qtbase/6.0)

      In case when QPlainTextEdit object is not visible and reacts on some signal which invokes appendPlainText on it, a strange white area is accessible with a scroll-bar at the end of the document. The white area disappears after resizing the window or typing some text or invoking a similar action that requires QPlainTextEdit interactions.

      The appended white area looks like this:

      The expected behavior of an example app should be like this:

       

      In the attachment, there is a simple app which reproduces the problematic behavior. The button appends text to the end of the document.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            dzialo3 Wojciech Dzialowski
            Votes:
            3 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes